--- a/report/tex/Abstract.tex
+++ b/report/tex/Abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract} 
-In this report, we review the paper The All Convolutional Net by Jost Tobias Springenberg, Alexey Dosovitskiy, Thomas Brox, and Martin Riedmiller.\\
-Instead of building convolutional neural nets with the conventional principle, the authors experiment with models that are increasingly homogeneous. They find that both the max-pooling layer and the fullying connected layer -- which have been important parts of the CNN structures -- can be replaced by other convolutional layers. This new structure with almost purely convolutional layer is said to perform as well as the state-of-the-art CNN architectures if not better in some cases.\\
-\textbf{TODO:} We find that...
+We review Striving for Simplicity: The All Convolutional Net by Jost Tobias Springenberg, Alexey Dosovitskiy, Thomas Brox, and Martin Riedmiller. Conventionally, convolutional neural nets (CNN) are built by alternating convolutional and max-pooling layers together with a few fully connected layers and a softmax layer at the end. However, state-of-the-art convolutional architectures have increasingly deviated the above model which begs the question of which components of a conventional convolutional net are responsible for achieving state-of-the-art performance. The authors demonstrate that the pooling function can be represented with the convolutional function and show that nets made out of only convolutional layers and a softmax layers can produce results comparable to, if not better than state-of-the-art performance on several object recognition datasets. They also introduce a new variant of the 'deconvolution approach' for visualizing features learned by CNNs that are applicable to a broader range of network structures. 
+
+Here, we replicate the neural nets proposed in the paper and attempt to visualize the first three layers of the neural net consisting of only convolutional layers and a softmax layer with the guided backpropagation method.
 \end{abstract} 
